--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/cv_pathfinder_regions.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/cv_pathfinder_regions.schema.yml
@@ -48,7 +48,21 @@ keys:
                   Given that all the sites are placed in a zone named after the region, the site ID must be unique within a region.
               location:
                 type: str
-                description: Location as a sring is resolved on Cloudvision.
+                description: Location as a string is resolved on Cloudvision.
+              resolved_location:
+                type: dict
+                description: |-
+                  PREVIEW: These keys are in preview mode.
+
+                  The resolved location elements.
+                  Needed for internet-exit Zscaler integration until we can autofill it from the lookup plugin.
+                keys:
+                  city:
+                    type: str
+                    required: true
+                  country:
+                    type: str
+                    required: true
               site_contact:
                 type: str
               site_after_hours_contact:
