--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/zscaler_endpoints.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/zscaler_endpoints.schema.yml
@@ -14,11 +14,21 @@ keys:
       PREVIEW: These keys are in preview mode.
 
       Special data model used for WAN internet-exit integration with Zscaler.
-      The model is supposed to be autofilled per-device using the `arista.avd.zscaler_endpoints` Ansible lookup plugin.
+      The model is supposed to be autofilled per-device using the `arista.avd.cv_zscaler_endpoints` Ansible lookup plugin.
       Example:
       ```yaml
-      zscaler_endpoints: "{{ lookup('arista.avd.zscaler_endpoints', !!!!TBD!!!!) }}"
+      zscaler_endpoints: "{{ lookup('arista.avd.cv_zscaler_endpoints', cv_server="<optional servername>", cv_token="<optional token>") }}"
       ```
+      The cv_server and cv_token options can be set as inventory variables instead of given as arguments. (Then they will also be used for cv_deploy)
+
+    # Future here:
+    #   cloud_name: <str; required>
+    # Future here or in another similar model:
+    #   device_location:
+    #     city: <str; required>
+    #     country: <str; required>
+    #     latitude: <str; required>
+    #     longitude: <str; required>
     keys:
       primary:
         type: dict
@@ -40,11 +50,13 @@ keys:
             type: str
             convert_types:
               - int
+              - float
             required: true
           longitude:
             type: str
             convert_types:
               - int
+              - float
             required: true
       secondary:
         type: dict
