--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/evpn_vlan_aware_bundles.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/evpn_vlan_aware_bundles.schema.yml
@@ -9,14 +9,10 @@ keys:
   evpn_vlan_aware_bundles:
     documentation_options:
       table: evpn-settings
-    description: 'Enable vlan aware bundles for every EVPN MAC-VRF.
-
-      If set to "true" each EVPN MAC-VRF will be configured as vlan-aware-bundle with the vlan name set
-      as the bundle name in case no name is specified with the "evpn_vlan_bundle" option.
-
-      Note: Even if set to "false" the EVPN MAC-VRFs will be configured as vlan-aware-bundle if the
-      "evpn_vlan_bundle" option is set for the l2vlan or svi.
-
-      '
+    description: |-
+      Enable vlan aware bundles for every EVPN MAC-VRF.
+      If set to `true` all SVIs will be configured in a vlan-aware-bundle per VRF using the VRF name as the bundle name. All `l2vlans` will be configured as separate vlan-aware-bundles with the VLAN name as the bundle name.
+      
+      The `evpn_vlan_bundle` option under `svis` and `l2vlans` takes precedence and will override this behavior. Per svi/l2vlan `evpn_vlan_bundle` will also work when this setting is disabled, and will be useful for mixing vlan-aware-bundles with regular MAC-VRFs.
     type: bool
     default: false
