issue-3809: fix the CI

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dhcp-servers.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dhcp-servers.cfg
@@ -5,13 +5,13 @@ dhcp server vrf AVRF
    subnet 172.16.254.0/24
       default-gateway 172.16.254.1
 !
+dhcp server vrf defauls
+!
 dhcp server
    !
    subnet 2a00:2::/64
    !
    subnet 10.2.3.0/24
-!
-dhcp server vrf defaults
 !
 dhcp server vrf defaulu
 !
