--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ip-nat.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ip-nat.cfg
@@ -61,16 +61,16 @@ interface Management1
    vrf MGMT
    ip address 10.73.255.122/24
 !
-ip nat pool prefix_16 prefix-length 16
-   range 10.0.0.1 10.0.255.254
-   range 10.1.0.0 10.1.255.255 1024 65535
-   utilization threshold 1 action log
-ip nat pool prefix_32 prefix-length 32
-   range 10.2.0.1 10.2.0.1
 ip nat pool prefix_24 prefix-length 24
-   range 10.3.0.1 10.3.0.254
-   range 10.3.1.0 10.3.1.255 1024 65535
    utilization threshold 100 action log
+ip nat pool prefix_32 prefix-length 32
+   range 10.2.0.1 10.2.0.1 1024 65535
+ip nat pool prefix_no_type prefix-length 21
+ip nat pool prefix_16 port-only 
+   port range 1023 65534
+   port range 1024 65535
+   port range 1022 65525
+ip nat pool prefix_port_only port-only 
 ip nat synchronization
    description test sync config
    expiry-interval 60
