Updating the key name to underlay_isis_bfd

--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/underlay_isis_bfd.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/underlay_isis_bfd.schema.yml
@@ -6,7 +6,7 @@
 # Use Ctrl + Space to get suggestions for every field. Autocomplete will pop up after typing 2 letters.
 type: dict
 keys:
-  underlay_isis_bfd_enable:
+  underlay_isis_bfd:
     documentation_options:
       table: isis-settings
     type: bool
