--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -3829,7 +3829,7 @@ keys:
       '
     type: bool
     default: false
-  underlay_isis_bfd_enable:
+  underlay_isis_bfd:
     documentation_options:
       table: isis-settings
     type: bool
