--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ip-security.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ip-security.yml
@@ -8,9 +8,9 @@ ip_security:
       dh_group: 20
     - name: IKE-2
     - name: IKE-FQDN
-      local_id_fqdn: fqdn.com
+      local_id_fqdn: fqdn.local
     - name: IKE-UFQDN
-      local_id_fqdn: my.awesome@fqdn.com
+      local_id_fqdn: my.awesome@fqdn.local
       # local_id won't be rendered as local_id_fqdn takes precedence
       local_id: 192.168.42.42
   sa_policies:
