--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/management-security.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/management-security.cfg
@@ -13,7 +13,8 @@ interface Management1
    ip address 10.73.255.122/24
 !
 management security
-   entropy source hardware
+   entropy source hardware haveged cpu jitter
+   entropy source hardware exclusive
    password encryption-key common
    password encryption reversible aes-256-gcm
    password minimum length 17
