--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/management-security.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/management-security.yml
@@ -1,6 +1,10 @@
 ### Management Security ###
 management_security:
-  entropy_source: hardware
+  entropy_source:
+    hardware: true
+    haveged: true
+    cpu_jitter: true
+    hardware_exclusive: true
   password:
     minimum_length: 17
     encryption_key_common: true
