--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -509,7 +509,8 @@ keys:
         keys:
           ipv4_applications:
             type: list
-            description: List of user defined IPv4 applications.
+            description: List of user defined IPv4 applications. The name should be
+              unique over all defined applications (ipv4 and l4).
             primary_key: name
             $ref: eos_cli_config_gen#/$defs/application_traffic_recognition_application
             items:
@@ -526,7 +527,8 @@ keys:
                   description: Destination prefix set name.
           l4_applications:
             type: list
-            description: List of user defined L4 applications.
+            description: List of user defined L4 applications. The name should be
+              unique over all defined applications (ipv4 and l4).
             primary_key: name
             $ref: eos_cli_config_gen#/$defs/application_traffic_recognition_application
             items:
