--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/application_traffic_recognition.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/application_traffic_recognition.schema.yml
@@ -80,7 +80,7 @@ keys:
         keys:
           ipv4_applications:
             type: list
-            description: List of user defined IPv4 applications.
+            description: List of user defined IPv4 applications. The name should be unique over all defined applications (ipv4 and l4).
             primary_key: name
             $ref: "eos_cli_config_gen#/$defs/application_traffic_recognition_application"
             items:
@@ -97,7 +97,7 @@ keys:
                   description: Destination prefix set name.
           l4_applications:
             type: list
-            description: List of user defined L4 applications.
+            description: List of user defined L4 applications. The name should be unique over all defined applications (ipv4 and l4).
             primary_key: name
             $ref: "eos_cli_config_gen#/$defs/application_traffic_recognition_application"
             items:
