--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/cv_pathfinder_internet_exit_policies.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/cv_pathfinder_internet_exit_policies.schema.yml
@@ -41,6 +41,7 @@ keys:
               description: |-
                 "Salt" used for auto generation of encryption keys for IPsec tunnels to Zscaler.
                 The keys will be generated as a hash of `salt_<hostname>_<policy_name>`.
+                Since this salt can be used to deduct the encryption key, it is recommeneded to use vault.
             cloud_name: # This will not be needed later, when we get it from the lookup plugin.
               type: str
               required: true
@@ -48,7 +49,7 @@ keys:
             domain_name:
               type: str
               required: true
-              description: Domain name as configured in Zscaler for the customer. Used as UFQDN suffix for authentication.
+              description: Domain name as configured in Zscaler for the tenant. Used as UFQDN suffix for authentication.
             download_bandwidth:
               type: int
               description: Maximum allowed download bandwidth in Mbps for each device using this policy.
