Addressing review comments

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ip-nat.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ip-nat.cfg
@@ -61,15 +61,18 @@ interface Management1
    vrf MGMT
    ip address 10.73.255.122/24
 !
+ip nat pool prefix_16 prefix-length 16
+   range 10.0.0.1 10.0.255.254
+   range 10.1.0.0 10.1.255.255 1024 65535
 ip nat pool prefix_24 prefix-length 24
    utilization threshold 100 action log
 ip nat pool prefix_32 prefix-length 32
    range 10.2.0.1 10.2.0.1 1024 65535
+   range 10.2.0.2 10.2.0.3
 ip nat pool prefix_no_type prefix-length 21
-ip nat pool prefix_16 port-only
-   port range 1023 65534
+ip nat pool prefix_17 port-only
+   port range 10 15
    port range 1024 65535
-   port range 1022 65525
 ip nat pool prefix_port_only port-only
 ip nat synchronization
    description test sync config
