--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ip_nat.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ip_nat.schema.yml
@@ -64,6 +64,7 @@ keys:
                     description: |-
                       IPv4 address.
                       Required when `type` is `ip-port` and ignored otherwise.
+                      `first_ip` and `last_ip` ip addresses should lie in same subnet.
                   first_port:
                     type: int
                     convert_types:
@@ -76,7 +77,9 @@ keys:
                       - str
                     min: 1
                     max: 65535
-                    description: Required when `first_port` is set.
+                    description: |-
+                      Required when `first_port` is set.
+                      `last_port` must be greater than or equal to `first_port`.
             utilization_log_threshold:
               type: int
               convert_types:
