--- a/ansible_collections/arista/avd/changelogs/changelog.yaml
+++ b/ansible_collections/arista/avd/changelogs/changelog.yaml
@@ -1725,3 +1725,17 @@ releases:
       name: cv_workflow
       namespace: ''
     release_date: '2024-03-28'
+  4.7.1:
+    changes:
+      bugfixes:
+      - 'Fix(dhcp_provisioner): Support custom `node_type_keys` as a list of dicts.
+        (#3813) by @carlbuchmann in https://github.com/aristanetworks/avd/pull/3842'
+      - 'Fix(plugins): Handle md-toc v9 (#3837) by @carlbuchmann in https://github.com/aristanetworks/avd/pull/3845'
+      - 'Fix(pyavd): Remove accidental requirement for PyYAML (#3838) by @carlbuchmann
+        in https://github.com/aristanetworks/avd/pull/3844'
+      release_summary: 'Release 4.7.1 - See documentation on avd.arista.com for details.
+
+        '
+    fragments:
+    - v4.7.1.yml
+    release_date: '2024-04-12'
