--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ip-security.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ip-security.cfg
@@ -17,6 +17,12 @@ ip security
    !
    ike policy IKE-2
    !
+   ike policy IKE-FQDN
+      local-id fqdn fqdn.local
+   !
+   ike policy IKE-UFQDN
+      local-id fqdn my.awesome@fqdn.local
+   !
    sa policy SA-1
       esp encryption aes128
       pfs dh-group 14
