--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -46,6 +46,7 @@ all:
             core-1-isis-sr-ldp:
             core-2-ospf-ldp:
             core-3-isis-sr-ldp:
+            core-4-multicast:
         TRUNK_GROUP_TESTS:
           children:
             TRUNK_GROUP_TESTS_L3LEAF:
