Feat(eos_cli_config_gen): Add capability to disable address-only for connectivity monitors

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-connectivity.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-connectivity.cfg
@@ -25,6 +25,29 @@ monitor connectivity
       local-interfaces HOST_SET address-only
       ip 10.10.10.1
       url https://server1.local.com
+   !
+   host server2
+      description
+      server2_connectivity_monitor
+      local-interfaces HOST_SET address-only
+      ip 10.10.10.2
+      url https://server2.local.com
+   !
+   host server3
+      description
+      server3_connectivity_monitor
+      local-interfaces HOST_SET
+      ip 10.10.10.3
+   vrf blue
+      interface set VRF_GLOBAL_SET Vlan21-24, Vlan29-32
+      local-interfaces VRF_GLOBAL_SET default
+      !
+      host server4
+         description
+         server4_connectivity_monitor
+         local-interfaces VRF_HOST_SET
+         ip 10.10.20.1
+         url https://server2.local.com
    vrf red
       interface set VRF_GLOBAL_SET Vlan21-24, Vlan29-32
       interface set VRF_HOST_SET Loopback12-14, 19-23
