--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -12167,7 +12167,7 @@ keys:
       control_functions:
         type: dict
         description: Configure routing control function to control which routes to
-          filter and accept from a peer or routing protocol.
+          filter, update and accept from a peer or routing protocol.
         keys:
           code_units:
             type: list
