Including the deprecated key

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/mac-security-eth-po-entropy.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/mac-security-eth-po-entropy.yml
@@ -33,8 +33,7 @@ mac_security:
 
 ### Mgmt sec
 management_security:
-  entropy_source:
-    hardware: true
+  entropy_source: hardware
   password:
     encryption_key_common: true
   ssl_profiles:
