--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/management-security.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/management-security.yml
@@ -1,6 +1,6 @@
 ### Management Security ###
 management_security:
-  entropy_source:
+  entropy_sources:
     hardware: true
     haveged: true
     cpu_jitter: true
