--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -6101,6 +6101,12 @@ keys:
     type: dict
     keys:
       entropy_source:
+        type: str
+        deprecation:
+          warning: true
+          removed: false
+          new_key: entropy_sources
+      entropy_sources:
         type: dict
         description: Source of entropy.
         keys:
