Apply suggestions from code review
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/management_security.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/management_security.schema.yml
@@ -13,7 +13,7 @@ keys:
         type: str
         deprecation:
           warning: true
-          removed: false
+          remove_in_version: v5.0.0
           new_key: entropy_sources
       entropy_sources:
         type: dict
