--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/application_traffic_recognition.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/application_traffic_recognition.schema.yml
@@ -101,6 +101,7 @@ keys:
             primary_key: name
             items:
               type: dict
+              $ref: "eos_cli_config_gen#/$defs/application_traffic_recognition_application"
               keys:
                 name:
                   type: str
