Moving test to deprecated_vars

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
@@ -619,6 +619,9 @@ management api gnmi
       vrf MONITORING
    provider eos-native
 !
+management security
+   entropy source hardware
+!
 stun
    server
       local-interface Ethernet1
