--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -6104,7 +6104,7 @@ keys:
         type: str
         deprecation:
           warning: true
-          removed: false
+          remove_in_version: v5.0.0
           new_key: entropy_sources
       entropy_sources:
         type: dict
