Feat(eos_cli_config_gen): Add support for BGP TCP AO.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/management-security.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/management-security.yml
@@ -60,3 +60,13 @@ management_security:
       chain_certificate:
         requirement:
           include_root_ca: true
+  shared_secret_profiles:
+    - profile_name: profile1
+      secrets:
+        - name: name1
+          secret: secret1
+          lifetime: infinite
+        - name: name2
+          secret: secret2
+          receive_lifetime: 20/12/2024
+          transmit_lifetime: infinite
