--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -382,6 +382,14 @@ keys:
                 new_key: listen_ranges
             session_tracker:
               type: str
+            shared_secret_profile_name:
+              type: str
+            hash_algorithm:
+              type: str
+              valid_values:
+                - "aes-128-cmac-96"
+                - "hmac-sha-256"
+                - "hmac-sha1-96"
             ttl_maximum_hops:
               type: int
               convert_types:
@@ -570,6 +578,14 @@ keys:
                   type: bool
             session_tracker:
               type: str
+            shared_secret_profile_name:
+              type: str
+            hash_algorithm:
+              type: str
+              valid_values:
+                - "aes-128-cmac-96"
+                - "hmac-sha-256"
+                - "hmac-sha1-96"
             ttl_maximum_hops:
               type: int
               convert_types:
