--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn.yml
@@ -43,6 +43,8 @@ router_bgp:
       allowas_in:
         enabled: true
         times: 5
+      shared_secret_profile_name: profile1
+      hash_algorithm: aes-128-cmac-96
     - ip_address: 192.168.255.2
       peer_group: EVPN-OVERLAY-PEERS
     - ip_address: 192.168.255.3
