clean up cleanup.yml

--- a/ansible_collections/arista/avd/molecule/cv_deploy/converge.yml
+++ b/ansible_collections/arista/avd/molecule/cv_deploy/converge.yml
@@ -41,10 +41,10 @@
         cv_submit_workspace_force: true
         cv_run_change_control: true
 
-    - name: 'Display CVP result'
-      run_once: true
-      ansible.builtin.debug:
-        msg: '{{ cv_deploy_results }}'
+    # - name: 'Display CVP result'
+    #   run_once: true
+    #   ansible.builtin.debug:
+    #     msg: '{{ cv_deploy_results }}'
 
     - name: Check CVP returns
       ansible.builtin.assert:
@@ -120,16 +120,48 @@
         cv_submit_workspace_force: false
       ignore_errors: yes
 
-    - name: 'Display CVP result'
-      run_once: true
-      ansible.builtin.debug:
-        msg: '{{ cv_deploy_results }}'
+    # - name: 'Display CVP result'
+    #   run_once: true
+    #   ansible.builtin.debug:
+    #     msg: '{{ cv_deploy_results }}'
 
     - name: Check CVP returns
       ansible.builtin.assert:
         that:
           # errors and warnings
           - cv_deploy_results.errors != []
+
+    - name: Cleanup
+      run_once: true
+      delegate_to: localhost
+      ansible.builtin.import_role:
+        name: arista.avd.cv_deploy
+      vars:
+        eos_config_dir: "{{ playbook_dir }}/intended/configs/base_configs"
+        structured_dir: "{{ playbook_dir }}/intended/structured_configs/base_configs"
+        cv_submit_workspace: true
+        cv_submit_workspace_force: true
+        cv_run_change_control: true
+
+    - name: Test = Provision with cv_submit_workspace_force = true
+      run_once: true
+      delegate_to: localhost
+      ansible.builtin.import_role:
+        name: arista.avd.cv_deploy
+      vars:
+        cv_devices: [ci-s1-leaf1, ci-s1-leaf2, ci-s1-leaf3, ci-s1-leaf4, ci-s1-spine1, ci-s1-spine2, ci-s1-core1 ]
+        cv_submit_workspace_force: true
+
+    # - name: 'Display CVP result'
+    #   run_once: true
+    #   ansible.builtin.debug:
+    #     msg: '{{ cv_deploy_results }}'
+
+    - name: Check CVP returns
+      ansible.builtin.assert:
+        that:
+          # errors and warnings
+          - cv_deploy_results.errors == []
 
     - name: Test = Provision with cv_run_change_control = false
       run_once: true
@@ -140,10 +172,10 @@
         cv_submit_workspace: true
         cv_run_change_control: false
 
-    - name: 'Display CVP result'
-      run_once: true
-      ansible.builtin.debug:
-        msg: '{{ cv_deploy_results }}'
+    # - name: 'Display CVP result'
+    #   run_once: true
+    #   ansible.builtin.debug:
+    #     msg: '{{ cv_deploy_results }}'
 
     - name: Check CVP returns
       ansible.builtin.assert:
