Updated documentation template.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/management-security.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/management-security.cfg
@@ -53,7 +53,10 @@ management security
    ssl profile tls-versions-profile
       tls versions 1.0 1.1
    session shared-secret profile profile1
+      secret name0 secret3 infinite
       secret name1 secret1 infinite
       secret name2 secret2 receive-lifetime 20/12/2024 transmit-lifetime infinite
+   session shared-secret profile profile2
+      secret name3 secret4 infinite
 !
 end
