--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -384,6 +384,7 @@ keys:
               type: str
             shared_secret_profile_name:
               type: str
+              description: To apply the profile name, it must be created under "management-security".
             hash_algorithm:
               type: str
               valid_values:
@@ -580,6 +581,7 @@ keys:
               type: str
             shared_secret_profile_name:
               type: str
+              description: To apply a profile, it must be created under "management-security".
             hash_algorithm:
               type: str
               valid_values:
