--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/loopbacks-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/loopbacks-interfaces.cfg
@@ -18,6 +18,7 @@ interface Loopback0
 interface Loopback1
    description VTEP_VXLAN_Tunnel_Source
    ip address 192.168.254.3/32
+   isis bfd
 !
 interface Loopback99
    description TENANT_A_PROJECT02_VTEP_DIAGNOSTICS
