Apply suggestions from code review
Co-authored-by: Guillaume Mulocher <gmulocher@arista.com>

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/MGMT_GATEWAY_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/MGMT_GATEWAY_TESTS.yml
@@ -19,6 +19,6 @@ l2leaf:
         - name: TEST-MGMT-GATEWAY-IN-NODE-GROUP
           id: 3
           mgmt_ip: 192.168.201.202/24
-          ipv6_mgmt_ip: 2000::105/64
+          ipv6_mgmt_ip: 2001:db8::105/64
       mgmt_gateway: 192.168.201.254
-      ipv6_mgmt_gateway: 2000::2
+      ipv6_mgmt_gateway: 2001:db8::2
