--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/TEST-MGMT-GATEWAY-IN-NODE-GROUP.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/TEST-MGMT-GATEWAY-IN-NODE-GROUP.cfg
@@ -19,12 +19,12 @@ interface Management1
    vrf MGMT
    ip address 192.168.201.202/24
    ipv6 enable
-   ipv6 address 2000::105/64
+   ipv6 address 2001:db8::105/64
 no ip routing vrf MGMT
 !
 ip route vrf MGMT 0.0.0.0/0 192.168.201.254
 !
-ipv6 route vrf MGMT ::/0 2000::2
+ipv6 route vrf MGMT ::/0 2001:db8::2
 !
 management api http-commands
    protocol https
