--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/TEST-MGMT-GATEWAY-IN-NODE-GROUP.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/TEST-MGMT-GATEWAY-IN-NODE-GROUP.yml
@@ -7,7 +7,7 @@ static_routes:
 ipv6_static_routes:
 - vrf: MGMT
   destination_address_prefix: ::/0
-  gateway: 2000::2
+  gateway: 2001:db8::2
 service_routing_protocols_model: multi-agent
 vlan_internal_order:
   allocation: ascending
@@ -27,8 +27,8 @@ management_interfaces:
   gateway: 192.168.201.254
   type: oob
   ipv6_enable: true
-  ipv6_address: 2000::105/64
-  ipv6_gateway: 2000::2
+  ipv6_address: 2001:db8::105/64
+  ipv6_gateway: 2001:db8::2
 management_api_http:
   enable_vrfs:
   - name: MGMT
