strict tags true to cleanup

--- a/ansible_collections/arista/avd/molecule/cv_deploy/cleanup.yml
+++ b/ansible_collections/arista/avd/molecule/cv_deploy/cleanup.yml
@@ -37,3 +37,4 @@
         cv_submit_workspace: true
         cv_submit_workspace_force: true
         cv_run_change_control: true
+        cv_strict_tags: true
