--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/structured_configs/dc1-spine2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/structured_configs/dc1-spine2.yml
@@ -65,6 +65,16 @@ router_bgp:
     remote_as: '65102'
     peer: dc1-leaf2b
     description: dc1-leaf2b_Ethernet2
+  - ip_address: 10.33.255.19
+    peer_group: IPv4-UNDERLAY-PEERS
+    remote_as: '65133'
+    peer: dc1-svc-leaf1a
+    description: dc1-svc-leaf1a_Ethernet2
+  - ip_address: 10.33.255.23
+    peer_group: IPv4-UNDERLAY-PEERS
+    remote_as: '65133'
+    peer: dc1-svc-leaf1b
+    description: dc1-svc-leaf1b_Ethernet2
   - ip_address: 10.255.0.3
     peer_group: EVPN-OVERLAY-PEERS
     peer: dc1-leaf1a
@@ -85,6 +95,16 @@ router_bgp:
     peer: dc1-leaf2b
     description: dc1-leaf2b
     remote_as: '65102'
+  - ip_address: 10.33.0.5
+    peer_group: EVPN-OVERLAY-PEERS
+    peer: dc1-svc-leaf1a
+    description: dc1-svc-leaf1a
+    remote_as: '65133'
+  - ip_address: 10.33.0.6
+    peer_group: EVPN-OVERLAY-PEERS
+    peer: dc1-svc-leaf1b
+    description: dc1-svc-leaf1b
+    remote_as: '65133'
   - ip_address: 142.112.39.2
     peer_group: IPv4-EXTERNAL-PEERS
     description: Primary_ISP_IPv4
@@ -179,6 +199,24 @@ ethernet_interfaces:
   mtu: 1500
   type: routed
   ip_address: 10.255.255.14/31
+- name: Ethernet5
+  peer: dc1-svc-leaf1a
+  peer_interface: Ethernet2
+  peer_type: service_leaf
+  description: P2P_LINK_TO_DC1-SVC-LEAF1A_Ethernet2
+  shutdown: false
+  mtu: 1500
+  type: routed
+  ip_address: 10.33.255.18/31
+- name: Ethernet6
+  peer: dc1-svc-leaf1b
+  peer_interface: Ethernet2
+  peer_type: service_leaf
+  description: P2P_LINK_TO_DC1-SVC-LEAF1B_Ethernet2
+  shutdown: false
+  mtu: 1500
+  type: routed
+  ip_address: 10.33.255.22/31
 loopback_interfaces:
 - name: Loopback0
   description: EVPN_Overlay_Peering
