--- a/ansible_collections/arista/avd/molecule/eos_validate_state/inventory/group_vars/FABRIC.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/inventory/group_vars/FABRIC.yml
@@ -69,7 +69,7 @@ default_interfaces:
     platforms: [ vEOS-lab ]
     uplink_interfaces: [ Ethernet1-2 ]
     downlink_interfaces: [ Ethernet1-8 ]
-  - types: [ l3leaf ]
+  - types: [ l3leaf, service_leaf ]
     platforms: [ vEOS-lab ]
     uplink_interfaces: [ Ethernet1-8 ]
     mlag_interfaces: [ Ethernet3-4 ]
@@ -100,3 +100,69 @@ l3_edge:
       nodes: [dc1-leaf2b, dc2-leaf2b]
       interfaces: [Ethernet6, Ethernet6]
       profile: DCI_profile
+
+# Custom node types
+node_type_keys:
+
+  - key: spine
+    type: spine
+    default_evpn_role: server
+    default_ptp_priority1: 20
+
+  - key: l3leaf
+    type: l3leaf
+    connected_endpoints: true
+    default_evpn_role: client
+    default_ptp_priority1: 30
+    mlag_support: true
+    network_services:
+      l2: true
+      l3: true
+    vtep: true
+
+  - key: l2leaf
+    type: l2leaf
+    connected_endpoints: true
+    mlag_support: true
+    network_services:
+      l2: true
+    underlay_router: false
+    uplink_type: port-channel
+
+  - key: super_spine
+    type: super-spine
+
+  - key: overlay_controller
+    type: overlay-controller
+    default_evpn_role: server
+
+  - key: wan_router
+    type: wan_router
+    default_evpn_role: client
+    default_wan_role: client
+    default_underlay_routing_protocol: none
+    default_overlay_routing_protocol: ibgp
+    network_services:
+      l3: true
+    vtep: true
+
+  - key: wan_rr
+    type: wan_rr
+    default_evpn_role: server
+    default_wan_role: server
+    default_underlay_routing_protocol: none
+    default_overlay_routing_protocol: ibgp
+    network_services:
+      l3: true
+    vtep: true
+
+  - key: service_leaf
+    type: service_leaf
+    connected_endpoints: true
+    default_evpn_role: client
+    default_ptp_priority1: 30
+    mlag_support: true
+    network_services:
+      l2: true
+      l3: true
+    vtep: true
